--- a/Frontend/src/app/Components/board/board.component.css
+++ b/Frontend/src/app/Components/board/board.component.css
@@ -6,6 +6,32 @@
     justify-items: center;
 }
 
+h2 {
+
+    color: #1D2E38;
+    font-family: "Roboto", sans-serif;
+    font-size: 25px;
+    font-weight: 450;
+    margin: 8px 12px 0 15px;
+}
+
+h3 {
+    color: gray;
+}
+
+.listWrapper {
+    background-color: #EBEBEB;
+    width: 450px;
+    border-radius: 5px;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.123);
+}
+
+.titleContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
 .boardTitle {
     color: #1D2E38;
     font-family: "Roboto", sans-serif;
@@ -14,26 +40,50 @@
     margin: 8px auto 0 15px;
 }
 
-.to-do-wrapper {
-    background-color: #EBEBEB;
-    width: 450px;
-    border-radius: 5px;
-    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.123);
-
+.example-list {
+    border: solid 1px #ccc;
+    margin: 10px;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
 }
 
-.in-progress-wrapper {
-    background-color: #EBEBEB;
-    width: 450px;
-    border-radius: 5px;
-    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.123);
-
+.example-box {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
 }
 
-.done-wrapper {
-    background-color: #EBEBEB;
-    width: 450px;
-    border-radius: 5px;
-    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.123);
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
 
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+    border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
